Enhance README with comprehensive project details
Expanded README with detailed features, architecture, technologies, and project structure.